Fix word break in article preview

--- a/src/components/ArticlePreview/ArticlePreview.module.scss
+++ b/src/components/ArticlePreview/ArticlePreview.module.scss
@@ -88,6 +88,7 @@
           -webkit-line-clamp: 5;
           line-clamp: 5;
           -webkit-box-orient: vertical;
+          word-break: break-word;
         }
       }
 
